--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": false,
-      "cwd": "c:/Users/pavan/Desktop/C++/Seraching",
-      "program": "c:/Users/pavan/Desktop/C++/Seraching/build/Debug/outDebug",
+      "externalConsole": true,
+      "cwd": "c:/Users/pavan/Desktop/Study/C++/Data Structure and Algorithm",
+      "program": "c:/Users/pavan/Desktop/Study/C++/Data Structure and Algorithm/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
